# subgraph-mcp

./: Cargo.toml  Dockerfile  README.md  query.graphql  schema.graphql
.github/workflows/: ci.yml
scripts/: release.sh
src/: constants.rs  error.rs  http_utils.rs  lib.rs  main.rs  metrics.rs  server.rs  server_helpers.rs  types.rs
tests/: timeout_tests.rs
