[package]
name = "subgraph-mcp"
version = "0.1.0"
edition = "2021"
authors = ["sahra"]
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0.12"
log = "0.4"
env_logger = "0.11.8"
futures = "0.3"
rmcp = { git = "https://github.com/sahra-karakoc/rust-sdk.git", branch = "sahra/extract-headers", features = [
    "macros",
    "transport-sse-server",
] }
schemars = "0.8"
axum = "0.8.4"
tokio-util = { version = "0.7.15" }
http = "1.3.1"
tracing = "0.1"
