[package]
name = "subgraph-mcp"
version = "0.1.1"
edition = "2021"
authors = ["GraphOps"]
license = "Apache-2.0"

[lib]
name = "subgraph_mcp"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0.12"
log = "0.4"
env_logger = "0.11.8"
futures = "0.3"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = [
    "macros",
    "transport-sse-server",
] }
schemars = "0.8"
axum = "0.8.4"
tokio-util = { version = "0.7.15" }
http = "1.3.1"
tracing = "0.1"
once_cell = "1.20"
prometheus-client = { version = "0.23.1" }

[dev-dependencies]
wiremock = "0.6"
